namespace sims_aggregator.Models
{
    public class Relationship
    {
        public Guid id { get; set; }
        public Guid idFrom { get; set; }
        public Guid idTo { get; set; }
    }
}
