// ==========================================
// SIMS AGGREGATOR SERVICE (PostgreSQL)
// ==========================================

Table incident {
  id uuid [pk]                                // GUID Primary Key
  created_at timestamp                       // Externer Zeitstempel (z.B. von TAXII / STIX)
  db_created_at timestamp [default: `now()`] // DB-Insert-Zeitstempel
  is_deleted boolean [default: false]         // Soft Delete Flag
  deleted_by int [null]                       // User-ID der löschenden Person (nullable)
  source_format varchar [not null]            // Formatquelle (z.B. "taxii", "raw json")
  type varchar [not null]                     // Incident / Object Type
  name varchar [not null]                     // Name / Titel des Incidents
  desc text                                   // Beschreibung / Details
}

Table relationship {
  id uuid [pk]                                // GUID Primary Key
  idFrom uuid [not null]                      // Ursprungs-Incident ID
  idTo uuid [not null]                        // Ziel-Incident ID
}

// Logische Verknüpfungen der Incidents
Ref: relationship.idFrom > incident.id
Ref: relationship.idTo > incident.id